<resources>
    <string name="app_name">Coronavirus Tracker</string>
    <string name="scan_for_bluetooth_devices">Scan for Bluetooth devices</string>
    <string name="add_new_element_to_database">Add new element to database</string>
    <string name="print_out_database">Print Out Database</string>
    <string name="generate_keys">Generate Keys</string>
    <string name="print_keys">Print Keys</string>
    <string name="createsignature">createSignature</string>
    <string name="verify_real_signature">Verify Real Signature</string>
    <string name="verify_fake_signature">Verify Fake Signature</string>
    <string name="start_download">Start Download</string>
    <string name="get_info_from_server">Check if I am at risk of COVID-19</string>
    <string name="upload_to_server">Upload to server</string>
    <string name="upload_fake_key_to_server">Upload fake key to server</string>
    <string name="upload_real_key_to_server">upload real key to server</string>
    <string name="no_bluetooth">\"Your device doesn\'t support bluetooth. \"</string>
    <string name="make_device_discoverable">make device discoverable</string>
    <string name="discover_other_nearby_devices">discover other nearby devices</string>
    <string name="check_if_in_discovery">check if in Discovery</string>
    <string name="reset_all">Reset All</string>
    <string name="start_discovery">Start Discovery</string>
    <string name="bluetooth_sucsess">Successfully shared data with nearby device</string>
    <string name="bluetooth_connection_sucsess">Successfully connected with bluetooth</string>
    <string name="bluetooth_error">Error with bluetooth. Retrying</string>
    <string name="notify_the_server_that_i_am_sick">notify the server that I am sick</string>
    <string name="loading">Loading...</string>
    <string name="lorem_ipsum">lorem Ipsum 1</string>
</resources>
