<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Scan"
        android:text="@string/make_device_discoverable"
        android:onClick="makeDiscoverable"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PrintDataBase"
        android:text="@string/print_out_database"
        android:onClick="printDatabase"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/getInfoFromServer"
        android:text="@string/get_info_from_server"
        android:onClick="getInfoFromServer"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uploadRealToServer"
        android:text="@string/upload_real_key_to_server"
        android:onClick="uploadRealKeyToServer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkIfInDiscovery"
        android:text="@string/check_if_in_discovery"
        android:onClick="checkIfInDiscovery"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetDB"
        android:text="@string/reset_all"
        android:onClick="resetAll"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/generateKeys"
        android:text="@string/generate_keys"
        android:onClick="generateKeys"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startDiscovery"
        android:text="@string/start_discovery"
        android:onClick="runDiscovery"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoBox"
/>











</LinearLayout>
